--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@
 /.php_cs            export-ignore
 /.travis.yml        export-ignore
 /phpunit.xml        export-ignore
+/phpunit.xml.dist   export-ignore
+/.php_cs.dist       export-ignore
